--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -57,14 +57,16 @@
     {% endfor %}
     {{ debugBarRender.renderHead() | raw }}
 </head>
+
+
 {% block fullBody %}
     <body>
     {% block navbar %}
         <nav class="navbar navbar-expand navbar-dark bg-primary sticky-top d-print-none">
             {% block navbarContent %}
                 <a class="navbar-brand d-none d-sm-inline" href="{{ asset('') }}" title="{{ i18n.trans('homepage') }}">
-                    <img src="{{ asset('Dinamic/Assets/Images/logo-white.png') }}" width="30" height="30"
-                         class="d-inline-block align-top" alt="FacturaScripts"/>
+                  <!---  <img src="{{ asset('Dinamic/Assets/Images/logo-white.png') }}" width="30" height="30"
+                         class="30" alt="FacturaScripts"/> -->
                     <span class="d-none d-xl-inline-block">{{ fsc.empresa.nombrecorto | raw }}</span>
                 </a>
                 <div class="navbar-collapse collapse">
